# sparklogimetrics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  dockerfile  pyproject.toml
config/: main.yaml
data/final/predictions_test_best_lr_model.orc/: .part-00000-ffdc0ee1-6e4f-4b82-8fd7-d852b8a81a4a-c000.snappy.orc.crc  part-00000-f054ea69-6998-4a04-979c-9879a58b2eb3-c000.snappy.orc
data/final/predictions_val_best_lr_model.orc/: .part-00000-c63e9ca2-5297-42c9-b436-0209ac6db26b-c000.snappy.orc.crc  part-00000-c63e9ca2-5297-42c9-b436-0209ac6db26b-c000.snappy.orc
data/final/previsoes_lr_teste.orc/: .part-00000-9235c941-d57d-4969-9988-6831d81fa9d9-c000.snappy.orc.crc  part-00000-9235c941-d57d-4969-9988-6831d81fa9d9-c000.snappy.orc
models/Regressor_logistico_1.0/data/: .part-00000-51dcf16c-4c32-4f5d-bed7-1e0fd7cf4553-c000.snappy.parquet.crc  .part-00000-e3a56406-f4b6-4d0a-9c2c-edde5073d7dd-c000.snappy.parquet.crc  part-00000-51dcf16c-4c32-4f5d-bed7-1e0fd7cf4553-c000.snappy.parquet  part-00000-e3a56406-f4b6-4d0a-9c2c-edde5073d7dd-c000.snappy.parquet
models/Regressor_logistico_1.0/metadata/: .part-00000.crc  (+1 more)
notebooks/modeling/: 1.0 - Reg_Logist_modelo v0.ipynb  1.0 - Reg_Logist_modelo v1.ipynb  1.0 - Reg_Logist_modelo.ipynb  1.1 - Reg_Logist_modelo.ipynb  1.1.1 - Reg_Logist_modelo_len(mean_lst).ipynb  1.2 - Reg_Logist_modelo.ipynb  1.2.1 - Reg_Logist_modelo_len(mean_lst).ipynb  2.0 - Avaliacao_modelo v0.ipynb  ambiente_testes.ipynb  teste_spark.ipynb  view_sql.ipynb
src/: process.py  train_model.py  utils.py
tests/: __init__.py
(+16 files in other folders)
